--- a/scss/layout/_hwb.scss
+++ b/scss/layout/_hwb.scss
@@ -31,6 +31,7 @@
     font-size: 64px;
     text-transform: uppercase;
     font-family: "New-Grotesk-Square";
+    position: relative;
    
    
 }
@@ -176,4 +177,6 @@
 .hwb__fb{
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
 }
